[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/soap_bottle.png" type="Texture" id=1]
[ext_resource path="res://scenes/toys/SoapBottle.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[node name="SoapBottle" type="RigidBody2D" groups=["no_pop_bubble"]]
collision_layer = 2
collision_mask = 346
gravity_scale = 5.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BubbleSpawner" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="SpawnTimer" type="Timer" parent="."]
process_mode = 0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
